2005-12-24  Aidan Kehoe  <kehoea@parhasard.net>

	* objects-gtk.c (MAX_FONT_COUNT):
	* objects-x.c (MAX_FONT_COUNT): Increase MAX_FONT_COUNT from 5000
	to INT_MAX. Applies to both the X and GTK platforms. 

2005-12-23  Stephen J. Turnbull  <stephen@xemacs.org>

	* objects-x.c (x_find_charset_font): More mule-ization.

2005-12-23  Stephen J. Turnbull  <stephen@xemacs.org>

	* objects-x.c (x_font_instance_truename): Mule-ize handling of
	font name (Xft names are UTF-8).  Fixes crash.

2005-12-20  Aidan Kehoe  <kehoea@parhasard.net>

	* objects-x.c (x_find_charset_font):
	Return Qnil on no match, not Qunbound. Fixes performance issues 
	based on the use of this return value in 
	objects.c:font_instantiate  
	
2005-12-18  Aidan Kehoe  <kehoea@parhasard.net>

	* syntax.c (charset_syntax):
	* syntax.c (update_just_this_syntax_table):
	* syntax.c (complex_vars_of_syntax):
	To my embarrassment, my previous change didn't actually work. This
	change makes
	    (char-syntax (make-char 'chinese-cns11643-1 50 50)) 
	give ?w, the expected result after the last change.
	
2005-12-18  Stephen J. Turnbull  <stephen@xemacs.org>

	* XEmacs 21.5.24 "dandelion" is released.

2005-12-14  Malcolm Purvis  <malcolmp@xemacs.org>

	* console.c (stuff_buffered_input): Compile body only if
	HAVE_TTY.

2005-12-18  Aidan Kehoe  <kehoea@parhasard.net>

	* chartab.c (Fmake_char_table):
	Set the default character class to word, not whitespace. 
	
2005-12-17  Aidan Kehoe  <kehoea@parhasard.net>

	* buffer.c:
	standard-syntax-table and standard-category-table are not
	available from Lisp any more, don't mention as Lisp variables. 
	
2005-12-17  Aidan Kehoe  <kehoea@parhasard.net>

	* console-x.c (x_perhaps_init_unseen_key_defaults):
	If the key name is a single character, and the keysym is NoSymbol,
	give it a default binding, if that is possible. This addresses the
	problem Zhang Wei points out in <871x118lc4.fsf@gmail.com>
	* event-Xt.c (x_to_emacs_keysym):